--- a/index.html
+++ b/index.html
@@ -3,11 +3,35 @@
   <head>
     <meta charset="UTF-8">
     <title>Portfólio Web Thyara</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <style>
+      .font-name {
+        font-family: 'Noto Sans', sans-serif;
+      }
+      body {
+        background-color: #785964;
+      }
+      #chang-style {
+        font-size: 20px;
+        text-align: center;     
+      }
+      .learn {
+        font-size: 20px;
+      }
+      .org {
+        font-size: 15px;
+      }
+      #format-img {
+        border-radius: 50%; 
+      }
+
+    </style>
   </head>
   <body>
     <h1>Portfólio Web</h1>
-    <h1>Thyara Campos Martins Nonato</h1>
-    <img src="thyara.jpg" alt="Foto da Thyara Nonato" width="200px">
+    <h1 class="font-name">Thyara Campos Martins Nonato</h1>
+    <img id="format-img" src="thyara.jpg" alt="Foto da Thyara Nonato" width="200px">
     <h2>Índice</h2>
     <ol>
         <li><a href="#Resumo">Resumo</a></li>
@@ -17,16 +41,16 @@
     </ol>
 
     <h2 id="Resumo">Resumo</h2>
-    <p>Meu nome é <strong>Thyara Nonato</strong>, sou natural do Paraná, mas hoje resido em <strong>Florianópolis/SC/Brasil.</strong> Sou <em>Engenheira Ambiental</em> por formação, com doutorado na mesma área. No momento estou estudanto na Trybe, pois quero fazer a minha <strong>transição de carreira</strong> para <em>Desenvolvedora Web</em>.</p>
+    <p class="font-name" id="chang-style">Meu nome é <strong>Thyara Nonato</strong>, sou natural do Paraná, mas hoje resido em <strong>Florianópolis/SC/Brasil.</strong> Sou <em>Engenheira Ambiental</em> por formação, com doutorado na mesma área. No momento estou estudanto na Trybe, pois quero fazer a minha <strong>transição de carreira</strong> para <em>Desenvolvedora Web</em>.</p>
     
     <h2 id="Lista de Habilidades">Lista de Habilidades</h2>
     <ul>
-        <li><em>Interesse em aprender</em></li>
-        <li><strong>Organização</strong></li>
-        <li><em>Capacidade de trabalhar em equipe</em></li>
-        <li>Git e GitHub</li>
-        <li><em>Html</em></li>
-        <li><strong>Linux</strong></li>
+        <li class="learn"><em>Interesse em aprender</em></li>
+        <li class="org"><strong>Organização</strong></li>
+        <li class="learn"><em>Capacidade de trabalhar em equipe</em></li>
+        <li class="org">Git e GitHub</li>
+        <li class="learn"><em>Html</em></li>
+        <li class="org"><strong>Linux</strong></li>
     </ul>
     <h2 id="Link interno">Link interno para a foto</h2>
     <a href="">Foto da Thyara Nonato</a><br><br>
