Atualizando layout e box model do portfólio

--- a/index.html
+++ b/index.html
@@ -5,33 +5,18 @@
     <title>Portfólio Web Thyara</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <style>
-      .font-name {
-        font-family: 'Noto Sans', sans-serif;
-      }
-      body {
-        background-color: #785964;
-      }
-      #chang-style {
-        font-size: 20px;
-        text-align: center;     
-      }
-      .learn {
-        font-size: 20px;
-      }
-      .org {
-        font-size: 15px;
-      }
-      #format-img {
-        border-radius: 50%; 
-      }
-
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Portfólio Web</h1>
-    <h1 class="font-name">Thyara Campos Martins Nonato</h1>
-    <img id="format-img" src="thyara.jpg" alt="Foto da Thyara Nonato" width="200px">
+    <div>
+      <h1 class="font-name">Thyara Campos Martins Nonato</h1>
+      <div class="image-container">
+        <img id="format-img" src="thyara.jpg" alt="Foto da Thyara Nonato" width="200px">
+        <h2 id="Resumo">Resumo</h2>
+        <p class="font-name" id="chang-style">Meu nome é <strong>Thyara Nonato</strong>, sou natural do Paraná, mas hoje resido em <strong>Florianópolis/SC/Brasil.</strong> Sou <em>Engenheira Ambiental</em> por formação, com doutorado na mesma área. No momento estou estudanto na Trybe, pois quero fazer a minha <strong>transição de carreira</strong> para <em>Desenvolvedora Web</em>.</p>
+      </div>
+    </div>
     <h2>Índice</h2>
     <ol>
         <li><a href="#Resumo">Resumo</a></li>
@@ -40,8 +25,6 @@
         <li><a href="#Link externo">Link externo para o Linkedin</a></li>
     </ol>
 
-    <h2 id="Resumo">Resumo</h2>
-    <p class="font-name" id="chang-style">Meu nome é <strong>Thyara Nonato</strong>, sou natural do Paraná, mas hoje resido em <strong>Florianópolis/SC/Brasil.</strong> Sou <em>Engenheira Ambiental</em> por formação, com doutorado na mesma área. No momento estou estudanto na Trybe, pois quero fazer a minha <strong>transição de carreira</strong> para <em>Desenvolvedora Web</em>.</p>
     
     <h2 id="Lista de Habilidades">Lista de Habilidades</h2>
     <ul>
